# exalt

./: .gitignore  LICENSE  README.md  pyproject.toml
exalt/: rules.py  search.py  tokenizer.py  vocab.py
exalt/text_encoder/: corpora.py  embed_loader.py  helpers.py  logger.py  nlp_tools.py  utils.py  vocab.py  word_mover_distance.py
exalt/text_encoder/pooling/: discreted_cosine_transform.py  docov.py  eigen_sent.py  fuzzy_max.py  geometric_embedding.py  geometric_embedding_forbert.py-bak  shallow_pooling.py  simple_baseline.py  vlawe.py-bak
tests/: test_vocab.py
