[tool.poetry]
name = "exalt"
version = "0.0.1"
description = ""
authors = ["yuanminglei <yuanminglei2016@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
black = {version = "^19.3b0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
